# tiff2

./: Cargo.toml  readme.md
src/: error.rs  lib.rs  util.rs
src/decoder/: decoder.rs  mod.rs  reader.rs
src/encoder/: mod.rs  tiff_value.rs
src/structs/: entry.rs  ifd.rs  image.rs  mod.rs  tags.rs  tiff.rs  value.rs
